--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+   <div class="navbar">
+  <ul>
+  <li><a href="convincehome.html"> Home </a></li>
+  <li><a href="convinceabout.html"> About </a></li>
+</ul>
+  </div>
+</body>
+</html>
